# smb-rs

./: Cargo.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
crates/smb-dtyp/: Cargo.toml
crates/smb-dtyp-derive/: Cargo.toml
crates/smb-dtyp-derive/src/: lib.rs
crates/smb-dtyp/src/: lib.rs
crates/smb-dtyp/src/binrw_util/: boolean.rs  helpers.rs  multi_sz.rs
crates/smb-dtyp/src/security/: ace.rs  acl.rs  security_descriptor.rs
crates/smb-fscc/: Cargo.toml
crates/smb-fscc/src/: chained_list.rs  common_info.rs  directory_info.rs  file_attributes.rs  filesystem_info.rs  lib.rs  query_file_info.rs  quota.rs  set_file_info.rs
crates/smb-msg/: Cargo.toml  README.md
crates/smb-msg-derive/: Cargo.toml
crates/smb-msg-derive/src/: lib.rs
crates/smb-msg/src/: cancel.rs  compressed.rs  create.rs  dfsc.rs  echo.rs  encrypted.rs  error.rs  file.rs  header.rs  info.rs  ioctl.rs  lib.rs  lock.rs  message.rs  negotiate.rs  notify.rs  oplock.rs  plain.rs  query_dir.rs  session_setup.rs  smb1.rs  test.rs  tree_connect.rs
crates/smb-msg/src/info/: common.rs  query.rs  set.rs
crates/smb-msg/src/ioctl/: fsctl.rs  msg.rs
crates/smb-rpc/: Cargo.toml
crates/smb-rpc/src/: pdu.rs
crates/smb-rpc/src/interface/: srvsvc.rs
crates/smb-transport/: Cargo.toml
crates/smb-transport/src/: lib.rs
crates/smb-transport/src/rdma/: smbd.rs
crates/smb/src/: compression.rs  connection.rs  dialects.rs  lib.rs  resource.rs  session.rs
crates/smb/src/session/: encryptor_decryptor.rs  signer.rs
crates/smb/tests/: dialects.rs  long_dir.rs
smb-cli/: Cargo.toml  README.md
smb-cli/src/: cli.rs  copy.rs  info.rs  lib.rs  main.rs  path.rs  security.rs  watch.rs
